force-app/package/objects/Auth_Provider_Login_History_Event__e/Auth_Provider_Login_History_Event__e.object-meta.xml
<CustomObject>
    <description>Events to create auth provider login history records</description>
    <label>Auth Provider Login History Event</label>
    <pluralLabel>Auth Provider Login History Events</pluralLabel>
</CustomObject>