force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/Auth_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider_Name__c</fullName>
    <label>Auth Provider Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>