force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>