force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/Login_Info__c.field-meta.xml
<CustomField>
    <fullName>Login_Info__c</fullName>
    <label>Login Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>