force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>