force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>