force-app/package/objects/Auth_Provider_Login_History_Event__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>